[tool.poetry]
name = "django-models"
version = "0.1.0"
description = ""
authors = ["Clarissa P <clarissapamonicutt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
